# AID_Backend_v2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  remove_db.sh  run_db.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  todos.md
aid_web/: manage.py
aid_web/aid_web/: asgi.py  settings.py  wsgi.py
aid_web/applyapp/: apps.py
aid_web/competitionapp/: apps.py
aid_web/config/: asgi.py  urls.py  wsgi.py
aid_web/config/settings/: base.py  local.py  prod.py  test.py
aid_web/faqapp/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
aid_web/newsapp/: admin.py  models.py  serializer.py  urls.py  views.py
aid_web/projectapp/: models.py
aid_web/questionboardapp/: apps.py
aid_web/recruitapp/: apps.py  urls.py  views.py
aid_web/seeding/management/commands/: custom_seed.py  seed.py
aid_web/studyapp/: admin.py  apps.py  docs.py  models.py  permissions.py  serializer.py  urls.py  views.py
aid_web/testapp/: admin.py  models.py  views.py
aid_web/testapp/management/commands/: seed_users.py
aid_web/testapp/migrations/: 0001_initial.py
aid_web/userapp/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
aid_web/userapp/tests/: test_user_model.py
aid_web/utils/: permissions.py
config/: nginx.prod.conf  nginx.test.conf
docs/: dev_rule.md  docker_explain.md  docker_setting.md  dummy_data_docs.md  frontend-must-read.md  local_setting.md  test_setting.md
