[tool.poetry]
name = "aid-web-backend-v2"
version = "0.1.0"
description = ""
authors = ["sihyeong671 <bshlab671@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
